--- a/package.json
+++ b/package.json
@@ -7,16 +7,9 @@
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
-  },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
-  },
+  "author": "",
+  "license": "",
   "dependencies": {
     "@vimeo/player": "^2.17.1",
     "lodash.throttle": "^4.1.1",
