--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "parcel-project-template",
+  "name": "videoPlayer_and_SimpleLightbox",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://korzhenkovitalii.github.io/goit-js-hw-08",
+  "homepage": "https://korzhenkovitalii.github.io/videoPlayer_and_SimpleLightbox",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
+    "build": "parcel build src/*.html --public-url /videoPlayer_and_SimpleLightbox/"
   },
   "keywords": [],
   "author": "",
